@@ -5,16 +5,18 @@
 \title{Draw rectangle(s) on the correlation matrix graph.}
 \usage{
 corrRect(
+  corrRes = NULL,
   index = NULL,
   name = NULL,
   namesMat = NULL,
-  corrRes = NULL,
   col = "black",
   lwd = 2,
   ...
 )
 }
 \arguments{
+\item{corrRes}{List of the \code{corrplot()} returns.}
+
 \item{index}{Vector, variable index of diag rect \code{c(Rect1from, Rect2from,
 Rect3from, ..., RectNto)} on the correlation matrix graph.
 It works when the colnames are the same as rownames, or both of them is NULL.
@@ -29,8 +31,6 @@ It needs \code{corrRes} inputted.}
 represents the names of xleft, ybottom, xright, ytop correspondingly.
 It needs \code{corrRes} inputted.}
 
-\item{corrRes}{List of the \code{corrplot()} returns.}
-
 \item{col}{Color of rectangles.}
 
 \item{lwd}{Line width of rectangles.}
@@ -38,7 +38,8 @@ It needs \code{corrRes} inputted.}
 \item{\dots}{Additional arguments passing to function \code{rect()}.}
 }
 \description{
-Draw rectangle(s) around the chart of corrrlation matrix.
+Draw rectangle(s) after the correlation matrix plotted. SUGGESTION: It's more convenient
+to draw rectangle(s) by using pipe operator `|>` since R 4.1.0.
 }
 \details{
 \code{corrRect} needs one of \code{index}, \code{name} and \code{namesMat} inputted.
@@ -52,22 +53,43 @@ M = cor(mtcars)
 r = rbind(c('gear', 'wt', 'qsec', 'carb'),
         c('wt', 'gear', 'carb', 'qsec'))
 corrplot(M, order = 'AOE') -> p
-corrRect(namesMat = r, corrRes = p)
+corrRect(p, namesMat = r)
+
+# same as using pipe operator `|>`
+if(getRversion() >= '4.1.0') {
+  corrplot(M, order = 'AOE') |> corrRect(namesMat = r)
+}
 
 
 r = c('gear', 'carb', 'qsec', 'wt')
-corrplot(M, method = 'circle', order = 'AOE', type='lower') -> p
-corrRect(namesMat = r, corrRes = p)
+corrplot(M, order = 'AOE', type='lower') -> p
+corrRect(p, namesMat = r)
 
-corrplot(M, method = 'circle', order = 'hclust', type = 'upper') -> p
-corrRect(index = c(1, 6, 11), corrRes = p)
+# same as using pipe operator `|>`
+if(getRversion() >= '4.1.0') {
+  corrplot(M, order = 'AOE', type='lower') |>
+    corrRect(namesMat = r)
+}
 
-corrplot(M, method = 'circle', order = 'hclust') -> p
-corrRect(index = c(1, 6, 11), corrRes = p)
 
-# same as
-corrplot(M, method = 'circle', order = 'hclust') -> p
-corrRect(name = c('carb', 'qsec', 'gear'), corrRes = p)
+corrplot(M, order = 'hclust', type = 'upper') -> p
+corrRect(p, index = c(1, 6, 11))
+
+# same as using pipe operator
+if(getRversion() >= '4.1.0') {
+  corrplot(M, order = 'AOE', type='lower') |>
+    corrRect(index = c(1, 6, 11))
+}
+
+
+corrplot(M, order = 'hclust') -> p
+corrRect(p, name = c('carb', 'qsec', 'gear'))
+
+# same as using pipe operator
+if(getRversion() >= '4.1.0') {
+  corrplot(M, order = 'hclust') |>
+    corrRect(name = c('carb', 'qsec', 'gear'))
+}
 
 
 
