@@ -2,9 +2,11 @@
 
 CHANGES
   * Add customizable rectangles to correlation plots in corrRect().(#185, requirements from @douglaswhitaker thanks).
-  * Remove `clus`, add `index` and `name` parameters in corrRect().
+  * Remove `clus`; add `index` and `name` parameters in corrRect().
   * Add `xName`, `yName` two columns in `corrPos` data frame(e.g. corrplot(...)$corrPos).
   * Add `arg` to the corrplot() return list.
+  * Add pipe operator `|>` examples when using corrRect().
+  * Revise the document.
 
 
 
